--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+        <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Excellent Organization Award</strong> of  
+          The 16th IEEE International Conference on Cloud Computing Technology and Science @<EM>IEEE CloudCom 2025</EM>.</smalll><br></li>
+          <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2026</u></em>!</smalll><br></li>
+          <li> <strongsmall>[2025/09]</strongsmall> &nbsp;&nbsp;<smalll>Serving as the Research Manager (Transitional) of
+               the Joint NTU-UBC Research Centre of Excellence in Active Living for the Elderly (LILY), NTU.
+         </smalll><br></li>
           <li> <strongsmall>[2025/09]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing the
               <EM><a href=" https://aaai-aiaa-2026.com/" target=“_blank”>The 1st AI for Healthy Aging and Longevity Workshop</a></EM>,
            conjunction with
@@ -138,14 +144,13 @@
               <EM><a href="https://ijcai-aiaa-2024.org/" target=“_blank”>The 4th AI for Ageless Aging Workshop (AIAA) workshop</a></EM>,
            conjunction with
               <EM><a href="https://ijcai24.org/" target=“_blank”>IJCAI 2024</a></EM>, now calling for papers!
-         </smalll><br></li>
+         <!-- </smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper (LLMs for Psychology) is accepted by <em>Findings of <u>EMNLP 2023</u></em>!</smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Outstanding Contribution Award</strong> of <em>European Alliance for Innovation
 (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</em>.</smalll><br></li>
             <li> <strongsmall>[2023/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>International Journal of Computer Vision (IJCV)</u> [IF: 19.5]</em>!</smalll><br></li>
             <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>CVPR 2023</u></em>!</smalll><br></li>
-<!--            <li> <strongsmall>[2022/12]</strongsmall> &nbsp;&nbsp;<smalll>Invited to serve as a Program Committee member of <em>IJCAI 2023</em>!</smalll><br></li>-->
             <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Signal Processing Letters</u> [IF: 3.9]</em>!</smalll><br></li>
           <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
@@ -160,7 +165,7 @@
             <li> <strongsmall>[2020/12]</strongsmall> &nbsp;&nbsp;<smalll>Our paper "Multi-level Co-Occurrence Graph Convolutional LSTM for Skeleton-Based Action Recognition" received <strong>2020 IEEE Healthcom Best Paper Award</strong> at <em>IEEE International Conference on E-health Networking, Application & Service</em>!</smalll><br></li>
             <li> <strongsmall>[2020/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Internet of Things Journal (IoTJ)</u> [IF: 9.5]</em>!</smalll><br></li>
             <li> <strongsmall>[2020/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Dean's Research Excellence Scholarship (Special Award)</strong> at Shenzhen Institute of Advanced Technology, Chinese Academy of Sciences (SIAT)!</smalll><br></li>
-            <li> <strongsmall>[2020/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2020</u> (Oral)</em>!</smalll><br></li>
+            <li> <strongsmall>[2020/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2020</u> (Oral)</em>!</smalll><br></li> -->
           <p></p>
         </li></td>
       </tr>
@@ -596,14 +601,16 @@
               <br>
               <br>
               <li> <stronghuge><STRONG>AI Singapore (AISG) Research PhD Fellowship Award</STRONG> (Including Top PhD Scholarship in SG), 2022-2025</stronghuge><br></li>
-              <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
               <li> <stronghuge><STRONG>Distinguished PC Member</STRONG> of IJCAI, 2022</stronghuge><br></li>
-              <li> <stronghuge> <STRONG>One ESI Highly Cited Paper & TPAMI Featured Article</STRONG> (2022 October Issue)</stronghuge><br></li>
-              <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
-              <li> <stronghuge><STRONG>Dean's Research Excellence Scholarship (Special Award)</STRONG> of SIAT, 2020</stronghuge><br></li>
+              <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
               <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG>, 2020</stronghuge><br></li>
-              <li> <stronghuge><STRONG>Outstanding Undergraduate Thesis Award</STRONG> of SCUT, 2019</stronghuge> <br></li>
+              <li> <stronghuge> <STRONG>ESI Highly Cited Paper & TPAMI Featured Article</STRONG> (2022 October Issue)</stronghuge><br></li>
+              <li> <stronghuge><STRONG>Excellent Organization Award</STRONG>, IEEE CloudCom Conference, 2025 </stronghuge><br></li>
+              <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
               <li> <stronghuge><STRONG>National Scholarship</STRONG>, Ministry of Education of China, 2018 </stronghuge><br></li>
+              <li> <stronghuge><STRONG>NTU Research Scholarship</STRONG>, 2021 </stronghuge><br></li>
+              <li> <stronghuge><STRONG>Dean's Research Excellence Scholarship (Special Award)</STRONG> of SIAT, 2020</stronghuge><br></li>
+              <li> <stronghuge><STRONG>Outstanding Undergraduate Thesis Award</STRONG> of SCUT, 2019</stronghuge> <br></li>
               <li> <stronghuge><STRONG>2nd Place (Leader)</STRONG> in South China Hackathon of Microsoft, 2018 </stronghuge><br></li>
               <li> <stronghuge><STRONG>1st Place (Leader)</STRONG> in Wenshi Software Design Contest of SCUT, 2018</stronghuge><br></li>
               <li> <stronghuge><STRONG>Outstanding Student Association</STRONG> (Leader) of SCUT SSE, 2017</stronghuge><br></li>
