--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <EM><a href="https://ijcai-aiaa-2024.org/" target=“_blank”>The 4th AI for Ageless Aging Workshop (AIAA) workshop</a></EM>,
            conjunction with
               <EM><a href="https://ijcai24.org/" target=“_blank”>IJCAI 2024</a></EM>, now calling for papers!
-         <!-- </smalll><br></li>
+         </smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper (LLMs for Psychology) is accepted by <em>Findings of <u>EMNLP 2023</u></em>!</smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Outstanding Contribution Award</strong> of <em>European Alliance for Innovation
 (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</em>.</smalll><br></li>
@@ -156,7 +156,7 @@
             <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
           <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2022</u> (Oral)</em>!</smalll><br></li>
             <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) Research PhD Fellowship Award</strong> (Including Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Transactions on Multimedia (TMM)</u> [IF: 8.2]</em>!</smalll><br></li>
+            <!-- <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Transactions on Multimedia (TMM)</u> [IF: 8.2]</em>!</smalll><br></li>
           <li> <strongsmall>[2021/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>ACMMM 2021</u></em>!</smalll><br></li>
             <li> <strongsmall>[2021/06]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</u> [IF: 24.3]</em>!</smalll><br></li>
           <li> <strongsmall>[2021/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2021</u> (Oral)</em>!</smalll><br></li>
@@ -583,24 +583,33 @@
 
 <tbody><tr>
         <td width="100%" valign="middle">
-          <h2>Selective Projects &amp; Awards &amp; Honors </h2>
+          <h2>Representative Projects </h2>
           <div style="line-height:25px">
           <p></p>
+                  <li> <stronghuge><STRONG><u>Principle Investigator</u></STRONG> of an Industrial Research Project.</li>
                   <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM></li>
                     <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
-                    <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 2 general programs of National Natural Science Foundation of China. (2018 to 2021)</li>
-            <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020): <EM>“Research and Development of Non-Invasive Gait * System”.</EM></li>
-              <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Shenzhen Sustainable Development of Science and Technology Project (2021): <EM>“Clinical Application and Research on Gait and Multi-Modal Analysis Based Elderly Fall and Protection System”.</EM></li>
+                    <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 2 general programs of National Natural Science Foundation of China (2018 to 2021).</li>
+            <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020).</EM></li>
+              <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Shenzhen Sustainable Development of Science and Technology Project (2021).</li>
 
               <br>
               The developed 4D Depth Video Based Gait Recognition & Emotion Prediction System and the Swarm Intelligence Computing and Multi-Sensor Based Sleep Monitoring System 
               have been applied to various universities and
-              hospitals with more than 10,000 clinical experiments, including: 
+              hospitals with more than 20,000 clinical experiments, including: 
               State Key Laboratory of Cognitive Neuroscience and Learning of Beijing Normal University, Peking University Sixth Hospital, 
               the Second Xiangya Hospital, Shenzhen People’s Hospital, etc.
-              <br>
-              <br>
-              <li> <stronghuge><STRONG>AI Singapore (AISG) Research PhD Fellowship Award</STRONG> (Including Top PhD Scholarship in SG), 2022-2025</stronghuge><br></li>
+              <p></p>
+          </li></div>
+        </td>
+      </tr>
+</tbody>
+
+        <td width="100%" valign="middle">
+          <h2>Awards </h2>
+          <div style="line-height:25px">
+          <p></p>
+              <li> <stronghuge><STRONG>AI Singapore (AISG) Research PhD Award</STRONG> (Including Top PhD Scholarship in SG), 2022-2025</stronghuge><br></li>
               <li> <stronghuge><STRONG>Distinguished PC Member</STRONG> of IJCAI, 2022</stronghuge><br></li>
               <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
               <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG>, 2020</stronghuge><br></li>
@@ -620,6 +629,7 @@
         </td>
       </tr>
 </tbody>
+
 
 
 <tbody><tr>
