--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
           <div style="line-height:25px">
           <p></p>
                   <li> <stronghuge><STRONG><u>Principle Investigator</u></STRONG> of an Industrial Research Project.</li>
-                  <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM></li>
+                  <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM> (~S$400,000) </li>
                     <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
                     <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 2 general programs of National Natural Science Foundation of China (2018 to 2021).</li>
             <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020).</EM></li>
@@ -613,12 +613,13 @@
               <li> <stronghuge><STRONG>Distinguished PC Member</STRONG> of IJCAI, 2022</stronghuge><br></li>
               <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
               <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG>, 2020</stronghuge><br></li>
+              <li> <stronghuge><STRONG>IEEE CloudCom Best Paper Runner-Up Award</STRONG></stronghuge><br></li>
               <li> <stronghuge> <STRONG>ESI Highly Cited Paper & TPAMI Featured Article</STRONG> (2022 October Issue)</stronghuge><br></li>
-              <li> <stronghuge><STRONG>Excellent Organization Award</STRONG>, IEEE CloudCom Conference, 2025 </stronghuge><br></li>
               <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
-              <li> <stronghuge><STRONG>National Scholarship</STRONG>, Ministry of Education of China, 2018 </stronghuge><br></li>
               <li> <stronghuge><STRONG>NTU Research Scholarship</STRONG>, 2021 </stronghuge><br></li>
-              <li> <stronghuge><STRONG>Dean's Research Excellence Scholarship (Special Award)</STRONG> of SIAT, 2020</stronghuge><br></li>
+              <br>
+              <li> <stronghuge><STRONG>National Scholarship</STRONG>, Ministry of Education of China (Top 5%), 2018 </stronghuge><br></li>
+              <li> <stronghuge><STRONG>President Scholarship</STRONG> (Special Award, Top 3%), SIAT, Chinese Academy of Sciences, 2020</stronghuge><br></li>
               <li> <stronghuge><STRONG>Outstanding Undergraduate Thesis Award</STRONG> of SCUT, 2019</stronghuge> <br></li>
               <li> <stronghuge><STRONG>2nd Place (Leader)</STRONG> in South China Hackathon of Microsoft, 2018 </stronghuge><br></li>
               <li> <stronghuge><STRONG>1st Place (Leader)</STRONG> in Wenshi Software Design Contest of SCUT, 2018</stronghuge><br></li>
@@ -642,6 +643,7 @@
                       <li> <stronghuge>Invited by <EM> <u>Joint SDU-NTU Centre for Artificial Intelligence Research (C-FAIR)</u> </EM>, China<br></li>
             <li> <stronghuge> Invited by <EM> Artificial Intelligence Thrust, Information Hub, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China<br></li>
               <li> <stronghuge> Invited by <EM>Institute of Artificial Intelligence, <u>Xiamen University</u></EM>, China<br></li>
+                <li> <stronghuge> Invited by <EM>chool of Software, <u>Shandong University</u></EM>, China<br></li>
             <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/" target=“_blank”>the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore<br></li>
               <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
                               Invited by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>.</stronghuge><br></li>
