--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+            <li> <strongsmall>[2026/01]</strongsmall> &nbsp;&nbsp;<smalll>Our latest survey, "<a href="https://arxiv.org/pdf/2401.15296">A Survey on 3D Skeleton Based Person Re-Identification: Taxonomy, Advances, Challenges, and Interdisciplinary Prospects</a>", has been updated and released! 🚀</smalll><br></li>
         <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Excellent Organization Award</strong> of  
           The 16th IEEE International Conference on Cloud Computing Technology and Science @<EM>IEEE CloudCom 2025</EM>.</smalll><br></li>
           <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2026</u></em>!</smalll><br></li>
@@ -135,7 +136,6 @@
           <li> <strongsmall>[2025/06]</strongsmall> &nbsp;&nbsp;<smalll>Serving as Publication Chair of
               <a href="http://www.cloudcom2025.org/cfp"> The 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025</EM> (conjunction with <EM>IEEE Transactions on Cloud Computing & The Journal of Cloud Computing by Springer</EM>), now calling for papers!
          </smalll><br></li>
-          <li> <strongsmall>[2025/02]</strongsmall> &nbsp;&nbsp;<smalll>Our survey paper "Recognizing Identities From Human Skeletons: A Survey on 3D Skeleton Based Person Re-Identification" is updated and released!</smalll><br></li>
           <li> <strongsmall>[2025/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper  "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is accepted by <em><u>Neurocomputing</u> [IF: 5.5]</em>!</smalll><br></li>
           <li> <strongsmall>[2024/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2025</u></em>!</smalll><br></li>
          <!-- <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
@@ -191,7 +191,7 @@
       <td valign="top" width="75%">
 	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
 	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
-     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
+     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2022 [IF: 24.3] (Extension of IJCAI Paper)
      </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
 		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
           <a href="https://drive.google.com/file/d/1uIu2QmKYt68YSenPmuBAFBULpH2mekpC/view?usp=drive_link">[PDF]</a>
@@ -227,6 +227,26 @@
   </tr>
  </tbody></table>
 
+ <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+    <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
+      <td align="center" width="25%">
+        <img src="./images/SRID_overview.jpeg" width="190" height="100">
+      </td>
+      <td valign="top" width="75%">
+      <strong>A Survey on 3D Skeleton Based Person Re-Identification: Taxonomy, Advances, Challenges, and Interdisciplinary Prospects</strong><br>
+       By <strong><u>Haocong Rao</a></u></strong>,
+       <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
+
+          <em>Arxiv Preprint, 2026</em><font color="#6495ed"> [First SRID Survey]</font><br>
+     <a href="https://arxiv.org/abs/2401.15296">[Link]</a>
+           <a href="https://arxiv.org/pdf/2401.15296">[PDF]</a>
+     <a href="https://github.com/Kali-Hac/3D-skeleton-based-person-re-ID-survey">[Resources]</a>
+<!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:B-L8WFJb_b8J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaquw:AFWwaeYAAAAAZmGcsuztIpWW1VDG8RiO_e3jOmE&scisig=AFWwaeYAAAAAZmGcsmOdDqGpNho4lBC1twerYq0&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
+        <p></p>
+      </td>
+    </tr>
+   </tbody></table>
+
 
    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
@@ -248,26 +268,6 @@
       </tr>
     </tbody></table>
 
-
- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-    <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
-      <td align="center" width="25%">
-        <img src="./images/SRID_overview.jpeg" width="190" height="100">
-      </td>
-      <td valign="top" width="75%">
-      <strong>Recognizing Identities From Human Skeletons: A Survey on 3D Skeleton Based Person Re-Identification</strong><br>
-       By <strong><u>Haocong Rao</a></u></strong>,
-       <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-
-          <em>Arxiv Preprint, 2025</em><font color="#6495ed"> [First SRID Survey]</font><br>
-     <a href="https://arxiv.org/abs/2401.15296">[Link]</a>
-           <a href="https://arxiv.org/pdf/2401.15296">[PDF]</a>
-     <a href="https://github.com/Kali-Hac/3D-skeleton-based-person-re-ID-survey">[Resources]</a>
-<!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:B-L8WFJb_b8J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaquw:AFWwaeYAAAAAZmGcsuztIpWW1VDG8RiO_e3jOmE&scisig=AFWwaeYAAAAAZmGcsmOdDqGpNho4lBC1twerYq0&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
-        <p></p>
-      </td>
-    </tr>
-   </tbody></table>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
