--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <p>
   Haocong's research interests include Human Skeleton Based Pattern Recognition, Resource-Efficient AI for Healthcare Applications, 3D Signal Processing, Self-Supervised/Unsupervised learning, AI4S. In 2020, the team he collaborated with initiated  <a href="https://arxiv.org/pdf/2401.15296">the <em>first</em> series </a> of deep learning based skeleton-based person re-ID research, 
-  with a focus on developing more efficient, safer (<em>e.g.</em>, appearance-privacy-protected), and robust human identification algorithms tailored for resource-constraint applications in security, healthcare, and embodied AI.
+  with a focus on developing more efficient, safer (<em>e.g.</em>, appearance-privacy-protected), and robust human skeleton based models tailored for resource-constraint applications in security, healthcare, and embodied AI.
 </p>
 <!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
 </strong>
