--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>CVPR 2023</u></em>!</smalll><br></li>
             <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Signal Processing Letters</u> [IF: 3.9]</em>!</smalll><br></li>
-          <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
+          <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Cover (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
           <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2022</u> (Oral)</em>!</smalll><br></li>
             <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) Research PhD Fellowship Award</strong> (Including Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
@@ -192,7 +192,7 @@
 	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
 	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
      <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2022 [IF: 24.3] (Extension of IJCAI Paper)
-     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
+     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Cover, ESI Highly Cited Paper)</font></strong></EM><br>
 		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
           <a href="https://drive.google.com/file/d/1uIu2QmKYt68YSenPmuBAFBULpH2mekpC/view?usp=drive_link">[PDF]</a>
          <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
@@ -614,7 +614,7 @@
               <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
               <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG>, 2020</stronghuge><br></li>
               <li> <stronghuge><STRONG>IEEE CloudCom Best Paper Runner-Up Award</STRONG></stronghuge><br></li>
-              <li> <stronghuge> <STRONG>ESI Highly Cited Paper & TPAMI Featured Article</STRONG> (2022 October Issue)</stronghuge><br></li>
+              <li> <stronghuge> <STRONG>ESI Highly Cited Paper & TPAMI Featured Cover</STRONG> (2022 October Issue)</stronghuge><br></li>
               <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
               <li> <stronghuge><STRONG>NTU Research Scholarship</STRONG>, 2021 </stronghuge><br></li>
               <br>
