--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <h2>News</h2>
         <p>
             <li> <strongsmall>[2026/01]</strongsmall> &nbsp;&nbsp;<smalll>Our latest survey "<a href="https://arxiv.org/pdf/2401.15296">
-              A Survey on 3D Skeleton Based Person Re-Identification: Taxonomy, Advances, Challenges, and Interdisciplinary Prospects</a>", has been released! 🚀</smalll><br></li>
+              A Survey on 3D Skeleton Based Person Re-Identification: Taxonomy, Advances, Challenges, and Interdisciplinary Prospects</a>" has been released! 🚀</smalll><br></li>
         <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Excellent Organization Award</strong> of  
           The 16th IEEE International Conference on Cloud Computing Technology and Science @<EM>IEEE CloudCom 2025</EM>.</smalll><br></li>
           <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2026</u></em>!</smalll><br></li>
