--- a/index.html
+++ b/index.html
@@ -205,6 +205,26 @@
    </tbody></table>
 
 
+ <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+    <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
+      <td align="center" width="25%">
+        <img src="./images/SRID_overview.jpeg" width="190" height="100">
+      </td>
+      <td valign="top" width="75%">
+      <strong>A Survey on 3D Skeleton Based Person Re-Identification: Taxonomy, Advances, Challenges, and Interdisciplinary Prospects</strong><br>
+       By <strong><u>Haocong Rao</a></u></strong>,
+       <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
+
+          <em>Arxiv Preprint, 2026</em><font color="#6495ed"> [First SRID Survey]</font><br>
+     <a href="https://arxiv.org/abs/2401.15296">[Link]</a>
+           <a href="https://arxiv.org/pdf/2401.15296">[PDF]</a>
+     <a href="https://github.com/Kali-Hac/3D-SRID-Survey">[Resources]</a>
+<!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:B-L8WFJb_b8J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaquw:AFWwaeYAAAAAZmGcsuztIpWW1VDG8RiO_e3jOmE&scisig=AFWwaeYAAAAAZmGcsmOdDqGpNho4lBC1twerYq0&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
+        <p></p>
+      </td>
+    </tr>
+   </tbody></table>
+
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
   <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
     <td align="center" width="25%">
@@ -226,27 +246,6 @@
     </td>
   </tr>
  </tbody></table>
-
- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-    <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
-      <td align="center" width="25%">
-        <img src="./images/SRID_overview.jpeg" width="190" height="100">
-      </td>
-      <td valign="top" width="75%">
-      <strong>A Survey on 3D Skeleton Based Person Re-Identification: Taxonomy, Advances, Challenges, and Interdisciplinary Prospects</strong><br>
-       By <strong><u>Haocong Rao</a></u></strong>,
-       <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-
-          <em>Arxiv Preprint, 2026</em><font color="#6495ed"> [First SRID Survey]</font><br>
-     <a href="https://arxiv.org/abs/2401.15296">[Link]</a>
-           <a href="https://arxiv.org/pdf/2401.15296">[PDF]</a>
-     <a href="https://github.com/Kali-Hac/3D-SRID-Survey">[Resources]</a>
-<!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:B-L8WFJb_b8J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaquw:AFWwaeYAAAAAZmGcsuztIpWW1VDG8RiO_e3jOmE&scisig=AFWwaeYAAAAAZmGcsmOdDqGpNho4lBC1twerYq0&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
-        <p></p>
-      </td>
-    </tr>
-   </tbody></table>
-
 
    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
@@ -587,7 +586,7 @@
           <div style="line-height:25px">
           <p></p>
                   <li> <stronghuge><STRONG><u>Principle Investigator</u></STRONG> of an Industrial Research Project.</li>
-                  <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM> (~S$400,000) </li>
+                  <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (新加坡国家研究基金—博士生研究项目) (2022 to 2025): <EM>“Resource-Efficient AI - Research and Application of AI for Skeleton-Based Person Re-Identification (资源高效型人工智能—基于人体骨架的行人重识别研究与应用)”</EM> (~S$400,000) </li>
                     <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
                     <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 2 general programs of National Natural Science Foundation of China (2018 to 2021).</li>
             <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020).</EM></li>
@@ -772,5 +771,4 @@
 </body>
 
 </html>
-
 
