--- a/index.html
+++ b/index.html
@@ -608,22 +608,22 @@
           <h2>Awards </h2>
           <div style="line-height:25px">
           <p></p>
-              <li> <stronghuge><STRONG>AI Singapore (AISG) Research PhD Award</STRONG> (Including Top PhD Scholarship in SG), 2022-2025</stronghuge><br></li>
-              <li> <stronghuge><STRONG>Distinguished PC Member</STRONG> of IJCAI, 2022</stronghuge><br></li>
-              <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
-              <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG>, 2020</stronghuge><br></li>
+              <li> <stronghuge><STRONG>AI Singapore (AISG) Research PhD Award</STRONG> (Including Top PhD Scholarship in SG)</stronghuge><br></li>
+              <li> <stronghuge><STRONG>Distinguished PC Member</STRONG> of IJCAI</stronghuge><br></li>
+              <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer)<br></li>
+              <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG></stronghuge><br></li>
               <li> <stronghuge><STRONG>IEEE CloudCom Best Paper Runner-Up Award</STRONG></stronghuge><br></li>
               <li> <stronghuge> <STRONG>ESI Highly Cited Paper & TPAMI Featured Cover</STRONG> (2022 October Issue)</stronghuge><br></li>
-              <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
-              <li> <stronghuge><STRONG>NTU Research Scholarship</STRONG>, 2021 </stronghuge><br></li>
+              <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</stronghuge><br></li>
+              <li> <stronghuge><STRONG>NTU Research Scholarship</STRONG></stronghuge><br></li>
               <br>
-              <li> <stronghuge><STRONG>National Scholarship</STRONG>, Ministry of Education of China (Top 5%), 2018 </stronghuge><br></li>
-              <li> <stronghuge><STRONG>President Scholarship</STRONG> (Special Award, Top 3%), SIAT, Chinese Academy of Sciences, 2020</stronghuge><br></li>
-              <li> <stronghuge><STRONG>Outstanding Undergraduate Thesis Award</STRONG> of SCUT, 2019</stronghuge> <br></li>
-              <li> <stronghuge><STRONG>2nd Place (Leader)</STRONG> in South China Hackathon of Microsoft, 2018 </stronghuge><br></li>
-              <li> <stronghuge><STRONG>1st Place (Leader)</STRONG> in Wenshi Software Design Contest of SCUT, 2018</stronghuge><br></li>
-              <li> <stronghuge><STRONG>Outstanding Student Association</STRONG> (Leader) of SCUT SSE, 2017</stronghuge><br></li>
-              <li> <stronghuge><STRONG>1st Prize (Leader)</STRONG> in Creative Programming Design Contest of SCUT SSE, 2016</stronghuge><br></li>
+              <li> <stronghuge><STRONG>National Scholarship</STRONG>, Ministry of Education of China (Top 5%)</stronghuge><br></li>
+              <li> <stronghuge><STRONG>President Scholarship</STRONG> (Special Award, Top 3%), SIAT, Chinese Academy of Sciences</stronghuge><br></li>
+              <li> <stronghuge><STRONG>Outstanding Undergraduate Thesis Award</STRONG> of SCUT</stronghuge> <br></li>
+              <li> <stronghuge><STRONG>2nd Place (Leader)</STRONG> in South China Hackathon of Microsoft</stronghuge><br></li>
+              <li> <stronghuge><STRONG>1st Place (Leader)</STRONG> in Wenshi Software Design Contest of SCUT</stronghuge><br></li>
+              <li> <stronghuge><STRONG>Outstanding Student Association</STRONG> (Leader) of SCUT SSE</stronghuge><br></li>
+              <li> <stronghuge><STRONG>1st Prize (Leader)</STRONG> in Creative Programming Design Contest of SCUT SSE</stronghuge><br></li>
               <p></p>
           </li></div>
         </td>
