--- a/index.html
+++ b/index.html
@@ -637,7 +637,8 @@
           <h2>Invited Talks</h2>
           <div style="line-height:25px">
           <p></p>
-          <li> <stronghuge><STRONG>"Exploring Skeleton-Based AI Models for Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> Department of Computer Science and Technology, <u>Nanjing University</u> </EM>, China<br></li>
+          <li> <stronghuge><STRONG>"Human Skeleton Based Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> School of Intelligence Science and Technology, <u>Peking University</u> </EM>, China<br></li>
+          <li> <stronghuge>Invited by <EM> Department of Computer Science and Technology, <u>Nanjing University</u> </EM>, China<br></li>
           <li> <stronghuge>Invited by <EM> School of Artificial Intelligence, <u>Shanghai Jiao Tong University</u> </EM>, China<br></li> 
                       <li> <stronghuge>Invited by <EM> <u>Joint SDU-NTU Centre for Artificial Intelligence Research (C-FAIR)</u> </EM>, China<br></li>
             <li> <stronghuge> Invited by <EM> Artificial Intelligence Thrust, Information Hub, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China<br></li>
