--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+          <li> <strongsmall>[2026/01]</strongsmall> &nbsp;&nbsp;<smalll>I accepted the invitation to serve as an Associate Editor of Frontiers in Aging [Impact Factor: 4.3]. 
+            Welcome to submit your manuscripts (AI in Aging; Musculoskeletal Aging) to the journal!
+         </smalll><br></li>
+          I accepted the invitation to serve as an Action Editor of Neural Networks [JCR: Q1; Impact Factor: 6.3]. Welcome to submit your manuscripts (AI for Quantum; AI by Quantum) to the journal!
             <li> <strongsmall>[2026/01]</strongsmall> &nbsp;&nbsp;<smalll>Our latest survey "<a href="https://arxiv.org/pdf/2401.15296">
               A Survey on 3D Skeleton Based Person Re-Identification: Taxonomy, Advances, Challenges, and Interdisciplinary Prospects</a>" has been released! 🚀</smalll><br></li>
         <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Excellent Organization Award</strong> of  
@@ -644,7 +648,7 @@
             <li> <stronghuge> Invited by <EM> Artificial Intelligence Thrust, Information Hub, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China<br></li>
               <li> <stronghuge> Invited by <EM>Institute of Artificial Intelligence, <u>Xiamen University</u></EM>, China<br></li>
                 <li> <stronghuge> Invited by <EM>chool of Software, <u>Shandong University</u></EM>, China<br></li>
-            <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/" target=“_blank”>the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore<br></li>
+            <li> <stronghuge><STRONG>"Discussion and Advice on the National AI Stragtegy 2.0"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore<br></li>
               <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
                               Invited by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>.</stronghuge><br></li>
               <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited by <EM>the Department of Computer Science and Engineering, <u>Southern University of Science and Technology</u></EM>, China</stronghuge><br></li>
