--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
-          <li> <strongsmall>[2026/01]</strongsmall> &nbsp;&nbsp;<smalll>I accepted the invitation to serve as an Associate Editor of Frontiers in Aging [Impact Factor: 4.3]. 
+          <li> <strongsmall>[2026/01]</strongsmall> &nbsp;&nbsp;<smalll>I accepted the invitation to serve as an Associate Editor of <a href="https://www.frontiersin.org/journals/aging">
+            Frontiers in Aging</a> [Impact Factor: 4.3]. 
             Welcome to submit your manuscripts (AI in Aging; Musculoskeletal Aging) to the journal!
          </smalll><br></li>
             <li> <strongsmall>[2026/01]</strongsmall> &nbsp;&nbsp;<smalll>Our latest survey "<a href="https://arxiv.org/pdf/2401.15296">
